--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@randlabs/myalgo-connect": "^1.2.0",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "morgan": "~1.9.1",
