--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "@randlabs/myalgo-connect": "^1.2.0",
+    "buffer": "^6.0.3",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "materialize-css": "^1.0.0",
     "morgan": "~1.9.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
@@ -30,6 +32,7 @@
     "@angular-devkit/build-angular": "~13.3.2",
     "@angular/cli": "~13.3.2",
     "@angular/compiler-cli": "~13.3.0",
+    "@architect/sandbox": "^3.3.7",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
@@ -38,7 +41,9 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.6.2",
-    "@architect/sandbox": "^3.3.7"
+    "typescript": "~4.6.2"
+  },
+  "browser": {
+    "crypto": false
   }
 }
