--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "@randlabs/myalgo-connect": "^1.2.0",
+    "algosdk": "^1.17.0",
     "buffer": "^6.0.3",
     "debug": "~2.6.9",
     "express": "~4.16.1",
